# file-uploader

./: .gitignore  .gitlab-ci.yml  Dockerfile  README.md  bump.sh  debug.sh  pyproject.toml  test.sh
.github/workflows/: codeql.yaml  python.yaml
config/: entrypoint.sh  gunicorn.conf.py  log.conf  start.sh
tests/: __init__.py  test_app.py
uploader/: app.py
