[tool.poetry]
name = "uploader"
version = "0.1.0"
description = "A file uploader application"
authors = ["T. E. Kalayci"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/tekrei/file-uploader"
repository = "https://github.com/tekrei/file-uploader"
documentation = "https://github.com/tekrei/file-uploader"
keywords = ["file", "upload", "download", "flask", "python"]
classifiers=[
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: Apache Software License",
]

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0"
flask-cors = "^5.0"
flask-openapi3 = "^3.1"

[tool.poetry.dev-dependencies]
autopep8 = "^2.3"
coverage = "^7.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
